# api_ecommercePet/models/categoriaModel.js
@@ -1,0 +1,9 @@
+const mongoose = require('mongoose');
+
+const categoriaSchema = new mongoose.Schema({
+    codigo: Number,
+    nome: String,
+    descricao: String
+});
+
+module.exports = mongoose.model('categorias', categoriaSchema);
